Refactor controllers and services; move attribute from User to Profile