@@ -1,20 +1,21 @@
 package com.sanez.service.impl;
 
 import com.sanez.dto.NotaDTO;
+import com.sanez.exception.OperacionNoPermitidaException;
 import com.sanez.exception.RecursoNoEncontradoException;
 import com.sanez.mapper.NotaMapper;
 import com.sanez.model.Nota;
 import com.sanez.model.Usuario;
 import com.sanez.repository.NotaRepository;
 import com.sanez.repository.UsuarioRepository;
+import com.sanez.security.service.CustomUserDetails;
 import com.sanez.service.NotaService;
 import jakarta.transaction.Transactional;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @Transactional
@@ -28,11 +29,14 @@ public class NotaServiceImpl implements NotaService {
         this.usuarioRepository = usuarioRepository;
     }
 
+    //Crear nota
     @Override
     public NotaDTO crearNota(NotaDTO notaDTO) {
-        Long usuarioId = getUsuarioIdFromToken();
+        Long usuarioId = obtenerIdUsuarioAutenticado();
+
         Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new RecursoNoEncontradoException("Usuario no encontrado"));
+                .orElseThrow(() -> new RecursoNoEncontradoException(
+                        "Usuario con id " + usuarioId + " no encontrado"));
 
         Nota nota = NotaMapper.toEntity(notaDTO);
         nota.setUsuario(usuario);
@@ -41,40 +45,40 @@ public class NotaServiceImpl implements NotaService {
         return NotaMapper.toDTO(notaGuardada);
     }
 
+    //Obtener nota por usuario
     @Override
     public List<NotaDTO> obtenerNotasPorUsuario() {
-        Long usuarioId = getUsuarioIdFromToken();
-        List<Nota> notas = notaRepository.findByUsuarioId(usuarioId);
+        Long usuarioId = obtenerIdUsuarioAutenticado();
 
-        if (!notas.isEmpty()) {
-            return notas.stream()
-                    .map(NotaMapper::toDTO)
-                    .collect(Collectors.toList());
-        }
-
-        boolean usuarioExiste = usuarioRepository.existsById(usuarioId);
-        if (!usuarioExiste) {
-            throw new RecursoNoEncontradoException("Usuario con id " + usuarioId + " no existe");
-        }
-
-        return Collections.emptyList();
+        return notaRepository.findByUsuarioId(usuarioId).stream()
+                .map(NotaMapper::toDTO)
+                .toList();
     }
 
+    //Eliminar nota
     @Override
     public void eliminarNota(Long id) {
-        Long usuarioId = getUsuarioIdFromToken();
+        Long usuarioId = obtenerIdUsuarioAutenticado();
+
         Nota nota = notaRepository.findById(id)
                 .orElseThrow(() -> new RecursoNoEncontradoException("Nota no encontrada"));
+
         if (!nota.getUsuario().getId().equals(usuarioId)) {
-            throw new RuntimeException("No tienes permiso para eliminar esta nota");
+            throw new OperacionNoPermitidaException("No tienes permiso para eliminar esta nota");
         }
-        notaRepository.deleteById(id);
+        notaRepository.delete(nota);
     }
 
-    private Long getUsuarioIdFromToken() {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-        return usuarioRepository.findByEmail(username)
-                .map(Usuario::getId)
-                .orElseThrow(() -> new RecursoNoEncontradoException("Usuario no encontrado en la base de datos"));
+
+    // ============================================
+    // MÉTODOS PRIVADOS AUXILIARES
+    // ============================================
+
+    private Long obtenerIdUsuarioAutenticado() {
+        Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if (principal instanceof CustomUserDetails userDetails){
+            return userDetails.getId();
+        }
+        throw new RecursoNoEncontradoException("Error al resolver la información del usuario");
     }
 }
